--- a/yamls/expense-config.yaml
+++ b/yamls/expense-config.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
-data:
-  API_URL: http://20.197.106.129:5000
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
-  name: client-config
+  name: expense-config
+data:
+  PORT: "5000"
+  CLIENT: 20.197.104.123
+  MONGODB_URL: mongodb://mongo-service:27017/diary-k8s
