--- a/yamls/mongodb-service.yaml
+++ b/yamls/mongodb-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: todo-mongodb
-  name: todo-mongo-service
+    app: db-mongodb
+  name: mongo-service
 spec:
   ports:
     - port: 27017
       targetPort: 27017
       protocol: TCP
   selector:
-    app: todo-mongodb
+    app: db-mongodb
