--- a/history/package.json
+++ b/history/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "tasks",
+  "name": "expenses",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
