--- a/yamls/client-config.yaml
+++ b/yamls/client-config.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 data:
-  API_URL: http://20.197.106.129:5000
+  API_URL1: http://20.197.106.129:5000
+  API_URL2: http://20.197.106.129:5000
 kind: ConfigMap
 metadata:
   creationTimestamp: null
