--- a/db2-svc.yaml
+++ b/db2-svc.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: db-mongodb
-  name: mongo-service
+    app: db2
+  name: db2-service
 spec:
   ports:
     - port: 27017
       targetPort: 27017
       protocol: TCP
   selector:
-    app: db-mongodb
+    app: db2
