--- a/finosys-be1-config.yaml
+++ b/finosys-be1-config.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: task-config
+  name: be1-config
 data:
   PORT: "5000"
   CLIENT: 20.197.104.123
-  MONGODB_URL: mongodb://mongo-service:27017/diary-k8s
+  MONGO_URL: mongodb://db1-service:27017/db1
