--- a/finosys-be1-service.yaml
+++ b/finosys-be1-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-backend-service
+  name: be1-service
 spec:
   ports:
   - port: 5000
     targetPort: 5000
   selector:
-    app: todo-server-app
+    app: be1
   type: LoadBalancer
