--- a/pv2.yaml
+++ b/pv2.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: todo-app-pv
+  name: pv2
 spec:
  accessModes:
  - ReadWriteMany
  capacity:
-   storage: 1G
+   storage: 1Gi
  hostPath:
-   path: /tmp/todo-pv
+   path: /tmp/pv2
