--- a/pvc1.yaml
+++ b/pvc1.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: todo-pvc
+  name: pvc1
 spec:
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: 1G
+      storage: 1Gi
   storageClassName: ""
