--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,2 @@
-REACT_APP_API_KEY=saasa
-REACT_APP_DB2=http://localhost:4001/cs
-REACT_APP_DB1=http://localhost:4000/history
+APP_DB1: http://52.139.240.96:5000
+APP_DB2: http://52.139.243.88:5001
