--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-APP_DB1: http://52.139.240.96:5000
-APP_DB2: http://52.139.243.88:5001
+APP_DB1=http://52.139.240.96:5000/history
+APP_DB2=http://52.139.243.88:5001/cs
