--- a/finosys-fe-config.yaml
+++ b/finosys-fe-config.yaml
@@ -5,3 +5,5 @@ metadata:
 data:
   APP_DB1: http://52.139.240.96:5000/history
   APP_DB2: http://52.139.243.88:5001/cs
+  APP_DB3: http://20.43.181.139:5002/user
+  APP_DB4: http://20.44.233.148:5003/tr
