--- a/DevOps/db1.yaml
+++ b/DevOps/db1.yaml
@@ -21,3 +21,17 @@ spec:
     volumeMounts:
     - name: pv1
       mountPath: /data/db
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: db1
+  name: db1-service
+spec:
+  ports:
+    - port: 27017
+      targetPort: 27017
+      protocol: TCP
+  selector:
+    app: db1
