--- a/DevOps/pv3.yaml
+++ b/DevOps/pv3.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv3
+spec:
+ accessModes:
+ - ReadWriteMany
+ capacity:
+   storage: 1Gi
+ hostPath:
+   path: /tmp/pv3
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc3
