--- a/DevOps/pv4.yaml
+++ b/DevOps/pv4.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv4
+spec:
+ accessModes:
+ - ReadWriteMany
+ capacity:
+   storage: 1Gi
+ hostPath:
+   path: /tmp/pv4
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc4
